fix: Background and foreground colors do not have a sufficient contrast ratio.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -143,7 +143,12 @@ BLOCK: header
 }
 
 .header__verion {
-  background-color: #aaa;
+  /*
+  SOURCE = https://dequeuniversity.com/rules/axe/4.8/color-contrast
+  Contrast Ratio = 7.00 : 1
+  */
+  color: #495564;
+  background-color: #F4F6F8;
   font-size: 0.5em;
   border-radius: 50px;
   padding: 0 0.5rem;
@@ -314,7 +319,8 @@ BLOCK: form
 
 .form__select-hash {
   /* From https://css.glass */
-  background-color: #626383;
+  color: var(--clr-black);
+  background-color: #9495AD;
   border: 1px solid black;
 }
 
@@ -368,8 +374,8 @@ BLOCK: form
 }
 
 .form__output-file-hash {
-  background-color: #626383;
-  color: #000000;
+  color: var(--clr-black);
+  background-color: #9495AD;
   border-radius: 1px;
   border-color: #000000;
   border-width: 1px;
